feat: roster responsible
This adds the ability to assign responsibles for certain rosters. These
people are the ones reponsible for organising the event for this roster
and thus is a nice way to remind them and others who should've done
their shit.
